legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr63549.c-5.4.0-1.out.txt
pr63549.c:7:1: error: ‘e’ has an incomplete type
 int i = a[e];  
 ^
